# Bankifi-Docker-Project

./: README.md
azure-deployment/: azure-vote-all-in-one-redis.yaml
rustwebservice/: Cargo.toml  Dockerfile  LICENSE  Multistage.Dockerfile
rustwebservice/src/: helloworld.rs  httpserver.rs  mainrestapi.rs  restapihttpserver.rs
