[package]
name = "rustwebservice"
version = "0.3.0"
authors = ["jaya-p"]
edition = "2018"
default-run = "restapiwebservice"

[[bin]]
name = "webservice"
path = "src/bin/main.rs"

[[bin]]
name = "restapiwebservice"
path = "src/mainrestapi.rs"

[dependencies]
# Hyper used for HTTP server library
hyper = "0.13"
# Tokio runtime for Hyper
tokio = { version = "0.2", features = ["full"] }
# serde_json serialize and deserialize json for REST
serde_json = "1.0"
# Unit testing
reqwest = { version = "0.10.4", features = ["blocking"] }
